Fix: Discussion Layout Bugs (#137)
See #135, #136

--- a/addons/themes/theme-nexfoundation/src/scss/components/_article.scss
+++ b/addons/themes/theme-nexfoundation/src/scss/components/_article.scss
@@ -128,6 +128,10 @@
     }
 }
 
+.Comment .CommentBody {
+    max-width: calc(100% - 50px);
+}
+
 .Comment .Item-Floor {
     padding-top: 12px;
     margin-right: 5px;
